--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
-<!DOCTYPE>
-<html>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
 
-    </head>
-    <BODY>
-        This is not a test
-    </BODY>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+    <link rel="stylesheet" href="./index.css">
+</head>
+
+<body>
+    <header>
+        <div class="banner-section">
+            <h1>Palmar's Index 1969391</h1>
+        </div>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Networking</a></li>
+            <li><a href="#">UI</a></li>
+            <li><a href="#">IT</a></li>
+            <li><a href="#">Programming</a></li>
+        </ul>
+    </nav>
+    <section class="hero-image-section">
+        <a href="./Assignment 3/1969391_ModernSolutions.ps1" download>Click to Download Latest Assignment</a>
+    </section>
+</body>
+
 </html>
