--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <div class="banner-section">
+        <section class="banner-section">
             <h1>Palmar's Index 1969391</h1>
-        </div>
+        </section>
     </header>
 
     <nav>
