--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
     
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Influences</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
+                <li><a href="inspirations.html">Inspirations</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
+
+    <main>
+        <section id="About me">
+            <h1>Who I am</h1>
+            <p>Add an image here</p>
+            <p>
+                My name is Palmarino DiMarco. I'm currently a first year student in the Computer Science program at John Abbott College.
+                My primary interst is video games, and I hope to get a job in the video game industry one day should my skills be sufficient to handle one.
+                So far the best thing that I've done at John Abbott was the creation of RNG Hell, a basic command line video game designed about 95% around luck.
+            </p>
+        </section>
+    </main>
     
     <footer>
         <p>Sources</p>
