All HTML made except the photos. Placeholder images added

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
-                <li><a href="inspirations.html">Influences</a></li>
+                <li><a href="inspirations.html">Inspirations</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -30,6 +30,8 @@
         <section id="contact_forms">
 
             <form action="/action_page.php" method="POST">
+
+
                 <h1>Contact information</h1>
                 <p>Please enter your contact information below if you would like to speak to me</p>
 
@@ -80,10 +82,13 @@
     </main>
 
     <footer>
-        <p>Sources</p>
+        <h3>Sources</h3>
         <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/">John Abbott</a>
-
-        <a href="https://colorpalettes.net/color-palette-4134/">Color</a>
+        <a href="https://www.miltonmarketing.com/coding/programming-concepts/object-oriented-programming-oop/">Object
+            Oriented Programming</a>
+        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html">Wii U</a>
+        <a href="https://noeticforce.com/best-game-engines">Game Engines</a>
+        <a href="https://colorpalettes.net/color-palette-4134/">Color Palette</a>
     </footer>
 </body>
 
