--- a/inspirations.html
+++ b/inspirations.html
@@ -20,17 +20,77 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
-                <li><a href="inspirations.html">Influences</a></li>
+                <li><a href="inspirations.html">Inspirations</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
     
+    <main>
+        <section class="influence">
+            <article class="influence_image">
+                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
+             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
+             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
+            </article>
+            <article class="influence_text">
+                <h1>Javascript and OOP</h1>
+                <p>I really enjoy programming so far in Computer Science, and the next steps that I will be taking to improve are learning about Javascript and Object Oriented Programming. </p>
+                <p>I look forward to learning nearly everything that we learn in Computer Science, and my favourite courses so far suggest that I should aim for a programming job.</p>
+                <p>By learning to code in Javascript and fully take advantage of objects, I can make programs that far exceed what I can do with my current skill set.</p>
+            </article>
+        </section>
+        <section class="influence">
+            <article class="influence_image">
+                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
+             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
+             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
+            </article>
+            <article class="influence_text">
+                <h1>Intermediate Game Development</h1>
+                <p>When developing RNG Hell, I tried to keep my scope for the game as small as possible and instead provide an experience that isn't commonly seen in games.</p>
+                <p>The reason for this small scope was because I still have a long way to go before I can work on a fully realized video game.</p>
+                <p>In due time, I particularily hope to learn about setting up movement, proper AI and integration with original assets.</p>
+                <p>In order to accomplish this, I believe that I need to become well-versed in video game engines to take my first steps in professional game development.</p>
+            </article>
+        </section>
+        <section class="influence">
+            <article class="influence_image">
+                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
+             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
+             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
+            </article>
+            <article class="influence_text">
+                <h1>Complex Mathematics and Programming</h1>
+                <p>I've always grown up loving Math, and that still hasn't changed today as I'm currently taking a complimentary Science Calculus I course</p>
+                <p>So far, the complex math that I'm used to working with in a traditional math class hasn't been applied much in Computer Science, but I know that those skills will be important later on.</p>
+                <p>I'm looking forward to apply more of my math skills to Computer Science, as I would really like a job that incorporates both programming and math.</p>
+            </article>
+        </section>
+        <section class="influence">
+            <article class="influence_image">
+                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
+             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
+             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
+            </article>
+            <article class="influence_text">
+                <h1>Designing for Multiple Systems</h1>
+                <p>When it comes to collecting video games, I often enjoy buying multiple different versions of the same game to compare the differences.</p>
+                <p>On top of that, one of my favourite consoles of all time is the Nintendo Wii U, a device that is infamous for its lack of third party support.</p>
+                <p>Due to the way I like to enjoy my video games, I've always been curious about the needs of different platforms when running the same program.</p>
+                <p>Currently I've only learned about developing for PC, with the exception of web development, so in time I hope to learn what makes certain machines more or less desirable for developers when compared to the common customer.</p>
+            </article>
+        </section>
+    </main>
+
     <footer>
-        <p>Sources</p>
+        <h3>Sources</h3>
         <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/">John Abbott</a>
-        
-        <a href="https://colorpalettes.net/color-palette-4134/">Color</a>
+        <a href="https://www.miltonmarketing.com/coding/programming-concepts/object-oriented-programming-oop/">Object
+            Oriented Programming</a>
+        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html">Wii U</a>
+        <a href="https://noeticforce.com/best-game-engines">Game Engines</a>
+        <a href="https://colorpalettes.net/color-palette-4134/">Color Palette</a>
     </footer>
 </body>
 
