--- a/index.html
+++ b/index.html
@@ -9,38 +9,35 @@
 </head>
 
 <body>
-    <div id="navigation">
-        <header>
-            <section class="banner-section">
-                <h1>Palmar DiMarco</h1>
-            </section>
-        </header>
+    <nav>
+        <section class="banner-section">
+            <h1>Palmarino DiMarco</h1>
+        </section>
+        <ul id="nav_links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
+            <li><a href="inspirations.html">Inspirations</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
-                <li><a href="inspirations.html">Inspirations</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-
-    <main>
+    <main id="index">
         <section id="About_me">
-            <h1>Who I am</h1>
-            <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
-             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
-             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
+            <img src="./assets/phone/palmar.jpg" alt="Palmarino DiMarco" sizes="(min-width: 590px) 400px,
+            (min-width: 1070px) 500px,
+            300vw" srcset="./assets/phone/palmar.jpg 300w,
+            ./assets/tablet/palmar.jpg 400w,
+            ./assets/desktop/palmar.jpg 500w">
 
             <article id="About_me_text">
+                <h1>Who I am</h1>
                 <p>My name is Palmarino DiMarco. I'm currently a first year student in the Computer Science program at
                     John
-                    Abbott College.</p>
-                <p>My primary interst is video games, and I hope to get a job in the video game industry one day should
+                    Abbott College. My primary interst is video games, and I hope to get a job in the video game
+                    industry one day should
                     my
-                    skills be sufficient to handle one.</p>
-                <p>So far the best thing that I've done at John Abbott was the creation of RNG Hell, a basic command
+                    skills be sufficient to handle one. So far the best thing that I've done at John Abbott was the
+                    creation of RNG Hell, a basic command
                     line
                     video game designed about 95% around luck.</p>
             </article>
@@ -49,12 +46,13 @@
 
     <footer>
         <h3>Sources</h3>
-        <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/">John Abbott</a>
-        <a href="https://www.miltonmarketing.com/coding/programming-concepts/object-oriented-programming-oop/">Object
-            Oriented Programming</a>
-        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html">Wii U</a>
-        <a href="https://noeticforce.com/best-game-engines">Game Engines</a>
-        <a href="https://colorpalettes.net/color-palette-4134/">Color Palette</a>
+        <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/" target="_blank">John
+            Abbott</a>
+        <a href="https://noeticforce.com/best-game-engines" target="_blank">Game Engines</a>
+        <a href="https://www.amazon.ca/Calculus-Early-Transcendentals-James-Stewart/dp/1285741552"
+            target="_blank">Calculus</a>
+        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html" target="_blank">Wii U</a>
+        <a href="https://colorpalettes.net/color-palette-4134/" target="_blank">Color Palette</a>
     </footer>
 </body>
 
