--- a/inspirations.html
+++ b/inspirations.html
@@ -9,88 +9,106 @@
 </head>
 
 <body>
-    <div id="navigation">
-        <header>
-            <section class="banner-section">
-                <h1>Palmar DiMarco</h1>
-            </section>
-        </header>
-    
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
-                <li><a href="inspirations.html">Inspirations</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-    
-    <main>
-        <section class="influence">
-            <article class="influence_image">
-                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
-             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
-             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
-            </article>
+
+    <nav>
+        <section class="banner-section">
+            <h1>Palmarino DiMarco</h1>
+        </section>
+        <ul id="nav_links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
+            <li><a href="inspirations.html">Inspirations</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+
+    <main id="inspirations">
+        <section class="influence" id="jac">
+
+            <img src="./assets/phone/jac.jpg" alt="John Abbott College" sizes="(min-width: 590px) 400px,
+            (min-width: 1070px) 500px,
+            300vw" srcset="./assets/phone/jac.jpg 300w,
+            ./assets/tablet/jac.jpg 400w,
+            ./assets/desktop/jac.jpg 500w">
+
             <article class="influence_text">
                 <h1>Javascript and OOP</h1>
-                <p>I really enjoy programming so far in Computer Science, and the next steps that I will be taking to improve are learning about Javascript and Object Oriented Programming. </p>
-                <p>I look forward to learning nearly everything that we learn in Computer Science, and my favourite courses so far suggest that I should aim for a programming job.</p>
-                <p>By learning to code in Javascript and fully take advantage of objects, I can make programs that far exceed what I can do with my current skill set.</p>
+                <p>I really enjoy programming so far in Computer Science, and the next steps that I will be taking to
+                    improve are learning about Javascript and Object Oriented Programming. I look forward to learning
+                    nearly everything that we learn in Computer Science, and my favourite
+                    courses so far suggest that I should aim for a programming job. By learning to code in Javascript
+                    and fully take advantage of objects, I can make programs that far
+                    exceed what I can do with my current skill set.</p>
             </article>
         </section>
-        <section class="influence">
-            <article class="influence_image">
-                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
-             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
-             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
-            </article>
+        <section class="influence" id="engine">
+            <img src="./assets/phone/game-engines.jpg" alt="Various popular game engines" sizes="(min-width: 590px) 400px,
+            (min-width: 1070px) 500px,
+            300vw" srcset="./assets/phone/game-engines.jpg 300w,
+            ./assets/tablet/game-engines.jpg 400w,
+            ./assets/desktop/game-engines.jpg 500w">
+
             <article class="influence_text">
                 <h1>Intermediate Game Development</h1>
-                <p>When developing RNG Hell, I tried to keep my scope for the game as small as possible and instead provide an experience that isn't commonly seen in games.</p>
-                <p>The reason for this small scope was because I still have a long way to go before I can work on a fully realized video game.</p>
-                <p>In due time, I particularily hope to learn about setting up movement, proper AI and integration with original assets.</p>
-                <p>In order to accomplish this, I believe that I need to become well-versed in video game engines to take my first steps in professional game development.</p>
+                <p>When developing RNG Hell, I tried to keep my scope for the game as small as possible and instead
+                    provide an experience that isn't commonly seen in games. The reason for this small scope was because
+                    I still have a long way to go before I can work on a
+                    fully realized video game. In due time, I particularily hope to learn about setting up movement,
+                    proper AI and integration with
+                    original assets. In order to accomplish this, I believe that I need to become well-versed in video
+                    game engines to
+                    take my first steps in professional game development.</p>
             </article>
         </section>
-        <section class="influence">
-            <article class="influence_image">
-                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
-             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
-             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
-            </article>
+        <section class="influence" id="math">
+            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook" sizes="(min-width: 590px) 400px,
+            (min-width: 1070px) 500px,
+            300vw" srcset="./assets/phone/calculus.jpg 300w,
+            ./assets/tablet/calculus.jpg 400w,
+            ./assets/desktop/calculus.jpg 500w">
+
             <article class="influence_text">
                 <h1>Complex Mathematics and Programming</h1>
-                <p>I've always grown up loving Math, and that still hasn't changed today as I'm currently taking a complimentary Science Calculus I course</p>
-                <p>So far, the complex math that I'm used to working with in a traditional math class hasn't been applied much in Computer Science, but I know that those skills will be important later on.</p>
-                <p>I'm looking forward to apply more of my math skills to Computer Science, as I would really like a job that incorporates both programming and math.</p>
+                <p>I've always grown up loving Math, and that still hasn't changed today as I'm currently taking a
+                    complimentary Science Calculus 1 course. So far, the complex math that I'm used to working with in a
+                    traditional math class hasn't been
+                    applied much in Computer Science, but I know that those skills will be important later on. I'm
+                    looking forward to apply more of my math skills to Computer Science, as I would really like a job
+                    that incorporates both programming and math.</p>
             </article>
         </section>
-        <section class="influence">
-            <article class="influence_image">
-                <img src="https://source.unsplash.com/Dl39g6QhOIM/300x200" alt="placeholder" srcset="https://source.unsplash.com/Dl39g6QhOIM/300x200 300w,
-             https://source.unsplash.com/Dl39g6QhOIM/600x400 600w,
-             https://source.unsplash.com/Dl39g6QhOIM/1200x800 1200w">
-            </article>
+        <section class="influence" id="multi_platform">
+            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U" sizes="(min-width: 590px) 400px,
+            (min-width: 1070px) 500px,
+            300vw" srcset="./assets/phone/WiiU.jpg 300w,
+            ./assets/tablet/WiiU.jpg 400w,
+            ./assets/desktop/WiiU.jpg 500w">
+
             <article class="influence_text">
                 <h1>Designing for Multiple Systems</h1>
-                <p>When it comes to collecting video games, I often enjoy buying multiple different versions of the same game to compare the differences.</p>
-                <p>On top of that, one of my favourite consoles of all time is the Nintendo Wii U, a device that is infamous for its lack of third party support.</p>
-                <p>Due to the way I like to enjoy my video games, I've always been curious about the needs of different platforms when running the same program.</p>
-                <p>Currently I've only learned about developing for PC, with the exception of web development, so in time I hope to learn what makes certain machines more or less desirable for developers when compared to the common customer.</p>
+                <p>When it comes to collecting video games, I often enjoy buying multiple different versions of the same
+                    game to compare the differences. On top of that, one of my favourite consoles of all time is the
+                    Nintendo Wii U, a device that is
+                    infamous for its lack of third party support. Due to the way I like to enjoy my video games, I've
+                    always been curious about the needs of different
+                    platforms when running the same program. Currently I've only learned about developing for PC, with
+                    the exception of web development, so in
+                    time I hope to learn what makes certain machines more or less desirable for developers when compared
+                    to the common customer.</p>
             </article>
         </section>
     </main>
 
     <footer>
         <h3>Sources</h3>
-        <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/">John Abbott</a>
-        <a href="https://www.miltonmarketing.com/coding/programming-concepts/object-oriented-programming-oop/">Object
-            Oriented Programming</a>
-        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html">Wii U</a>
-        <a href="https://noeticforce.com/best-game-engines">Game Engines</a>
-        <a href="https://colorpalettes.net/color-palette-4134/">Color Palette</a>
+        <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/" target="_blank">John
+            Abbott</a>
+        <a href="https://noeticforce.com/best-game-engines" target="_blank">Game Engines</a>
+        <a href="https://www.amazon.ca/Calculus-Early-Transcendentals-James-Stewart/dp/1285741552"
+            target="_blank">Calculus</a>
+        <a href="https://www.nintendo.co.uk/Wii-U/Wii-U-344102.html" target="_blank">Wii U</a>
+        <a href="https://colorpalettes.net/color-palette-4134/" target="_blank">Color Palette</a>
     </footer>
 </body>
 
