--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="index_footer">
         <h3>Sources</h3>
         <a href="http://www.johnabbott.qc.ca/john-abbott-set-to-reveal-hall-of-distinction/" target="_blank">John
             Abbott</a>
