--- a/inspirations.html
+++ b/inspirations.html
@@ -22,13 +22,12 @@
         </ul>
     </nav>
 
+    <!-- sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw"  -->
 
     <main id="inspirations">
         <section class="influence" id="jac">
 
-            <img src="./assets/phone/jac.jpg" alt="John Abbott College" sizes="(min-width: 590px) 400px,
-            (min-width: 1070px) 500px,
-            300vw" srcset="./assets/phone/jac.jpg 300w,
+            <img src="./assets/phone/jac.jpg" alt="John Abbott College" srcset="./assets/phone/jac.jpg 300w,
             ./assets/tablet/jac.jpg 400w,
             ./assets/desktop/jac.jpg 500w">
 
@@ -43,9 +42,7 @@
             </article>
         </section>
         <section class="influence" id="engine">
-            <img src="./assets/phone/game-engines.jpg" alt="Various popular game engines" sizes="(min-width: 590px) 400px,
-            (min-width: 1070px) 500px,
-            300vw" srcset="./assets/phone/game-engines.jpg 300w,
+            <img src="./assets/phone/game-engines.jpg" alt="Various popular game engines" srcset="./assets/phone/game-engines.jpg 300w,
             ./assets/tablet/game-engines.jpg 400w,
             ./assets/desktop/game-engines.jpg 500w">
 
@@ -62,16 +59,14 @@
             </article>
         </section>
         <section class="influence" id="math">
-            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook" sizes="(min-width: 590px) 400px,
-            (min-width: 1070px) 500px,
-            300vw" srcset="./assets/phone/calculus.jpg 300w,
+            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook"  srcset="./assets/phone/calculus.jpg 300w,
             ./assets/tablet/calculus.jpg 400w,
             ./assets/desktop/calculus.jpg 500w">
 
             <article class="influence_text">
                 <h1>Complex Mathematics and Programming</h1>
-                <p>I've always grown up loving Math, and that still hasn't changed today as I'm currently taking a
-                    complimentary Science Calculus 1 course. So far, the complex math that I'm used to working with in a
+                <p>I've always loved Math growing up, and that still hasn't changed today as I'm currently taking a
+                    complimentary Science Calculus 1 course. So far the complex math that I'm used to working with in a
                     traditional math class hasn't been
                     applied much in Computer Science, but I know that those skills will be important later on. I'm
                     looking forward to apply more of my math skills to Computer Science, as I would really like a job
@@ -79,9 +74,7 @@
             </article>
         </section>
         <section class="influence" id="multi_platform">
-            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U" sizes="(min-width: 590px) 400px,
-            (min-width: 1070px) 500px,
-            300vw" srcset="./assets/phone/WiiU.jpg 300w,
+            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U"  srcset="./assets/phone/WiiU.jpg 300w,
             ./assets/tablet/WiiU.jpg 400w,
             ./assets/desktop/WiiU.jpg 500w">
 
