--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
         <ul id="nav_links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="https://github.com/Picard4/Picard4.github.io" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/Picard4" target="_blank">GitHub</a></li>
             <li><a href="inspirations.html">Inspirations</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
