--- a/index.html
+++ b/index.html
@@ -20,16 +20,58 @@
             ./assets/desktop/palmar.jpg 500w">
 
             <article id="About_me_text">
-                <h1>Who I am</h1>
-                <p>My name is Palmarino DiMarco. I'm currently a first year student in the Computer Science program at
-                    John
-                    Abbott College. My primary interest is video games, and I hope to get a job in the video game
-                    industry one day should
-                    my
-                    skills be sufficient to handle one. So far the best thing that I've done at John Abbott was the
-                    creation of RNG Hell, a basic command
-                    line
-                    video game designed about 95% around luck.</p>
+                <h1>Introduction</h1>
+                <p>
+                    My name is Palmarino DiMarco, and I am currently a student in the Bachelor of Computer Science Program at Concordia University. 
+                    While working on a project, I aim to utilize a patient approach which allows me to take all the time necessary to produce the best possible end product.
+                    My main hobbies are playing video games, improving my programming skills, and taking care of my pets (two guinea pigs and one budgie). 
+                </p>
+            </article>
+
+            <article>
+                <h1>Technologies</h1>
+                <ul>
+                    <li>C#</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Java</li>
+                    <li>Android</li>
+                    <li>Python</li>
+                    <li>Bash</li>
+                    <li>PowerShell</li>
+                    <li>ReactJS</li>
+                    <li>XAML</li>
+                    <li>MySQL</li>
+                    <li>SQLite</li>
+                </ul>
+            </article>
+
+            <article>
+                <h1>Education</h1>
+                
+                <h2>John Abbott College – Computer Science Program</h2>
+                <h3>2019-2022</h3>
+                <ul>
+                    <li>Received an AICQ Scholarship during Graduation.</li>
+                    <li>Awarded a CPMT Bursary for my performance during the 2019-2020 year.</li>
+                    <li>
+                        Worked with Zako Enterprises inc for the final semester’s Stage 
+                        by assisting in the development of a ReactJS website called <a href="https://app.lowkler.com/">Lowkler.</a>
+                    </li>
+                </ul>
+
+                <h2>St. Thomas High School - International Baccalaureate Program</h2>
+                <h3>2014-2019</h3>
+                <ul>
+                    <li>Awarded the Mark Douglas Pogue at Graduation.</li>
+                    <li>
+                        Hosted a <a href="https://www.westislandblog.com/st-thomas-high-student-to-host-first-nintendo-switch-tournament-benefitting-autism/">tournament</a> 
+                        featuring a variety of Nintendo Switch games with all profits donated to 
+                        <a href="www.specialneedssport.ca">Proset Autism</a> for my IB Personal Project.
+                    </li>
+                    <li>Won the 3rd Place award for Best Speaker during the Model UN held in 2019.</li>
+                </ul>
             </article>
         </section>
     </main>
