Improved the styling of the About Me page

--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
     <nav id="standard_navbar"></nav>
 
     <main id="index">
-        <section id="About_me">
-            <img src="./assets/phone/palmar.jpg" alt="Palmarino DiMarco" sizes="(min-width: 590px) 400px,
-            (min-width: 1070px) 500px,
-            300vw" srcset="./assets/phone/palmar.jpg 300w,
-            ./assets/tablet/palmar.jpg 400w,
-            ./assets/desktop/palmar.jpg 500w">
-
-            <article id="About_me_text">
+        <section id="about_me">
+            <article id="introduction_text">
                 <h1>Introduction</h1>
                 <p>
-                    My name is Palmarino DiMarco, and I am currently a student in the Bachelor of Computer Science Program at Concordia University. 
-                    While working on a project, I aim to utilize a patient approach which allows me to take all the time necessary to produce the best possible end product.
-                    My main hobbies are playing video games, improving my programming skills, and taking care of my pets (two guinea pigs and one budgie). 
+                    My name is Palmarino DiMarco, and I am currently a student in the Bachelor of Computer Science
+                    Program at Concordia University.
+                    While working on a project, I aim to utilize a patient approach which allows me to take all the time
+                    necessary to produce the best possible end product.
+                    My main hobbies are playing video games, improving my programming skills, and taking care of my pets
+                    (two guinea pigs and one budgie).
                 </p>
             </article>
 
-            <article>
+            <img id="self_portrait" src="./assets/phone/palmar.jpg" alt="Palmarino DiMarco"
+                sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw" srcset="./assets/phone/palmar.jpg 300w,
+            ./assets/tablet/palmar.jpg 400w,
+            ./assets/desktop/palmar.jpg 500w">
+
+            <article id="technologies_text">
                 <h1>Technologies</h1>
                 <ul>
                     <li>C#</li>
@@ -47,17 +49,18 @@
                 </ul>
             </article>
 
-            <article>
+            <article id="education_text">
                 <h1>Education</h1>
-                
+
                 <h2>John Abbott College – Computer Science Program</h2>
                 <h3>2019-2022</h3>
                 <ul>
                     <li>Received an AICQ Scholarship during Graduation.</li>
                     <li>Awarded a CPMT Bursary for my performance during the 2019-2020 year.</li>
                     <li>
-                        Worked with Zako Enterprises inc for the final semester’s Stage 
-                        by assisting in the development of a ReactJS website called <a href="https://app.lowkler.com/">Lowkler.</a>
+                        Worked with Zako Enterprises inc for the final semester’s Stage
+                        by assisting in the development of a ReactJS website called <a class="inline-link"
+                            href="https://app.lowkler.com/">Lowkler.</a>
                     </li>
                 </ul>
 
@@ -66,9 +69,11 @@
                 <ul>
                     <li>Awarded the Mark Douglas Pogue at Graduation.</li>
                     <li>
-                        Hosted a <a href="https://www.westislandblog.com/st-thomas-high-student-to-host-first-nintendo-switch-tournament-benefitting-autism/">tournament</a> 
-                        featuring a variety of Nintendo Switch games with all profits donated to 
-                        <a href="www.specialneedssport.ca">Proset Autism</a> for my IB Personal Project.
+                        Hosted a <a class="inline-link"
+                            href="https://www.westislandblog.com/st-thomas-high-student-to-host-first-nintendo-switch-tournament-benefitting-autism/">tournament</a>
+                        featuring a variety of Nintendo Switch games with all profits donated to
+                        <a class="inline-link" href="www.specialneedssport.ca">Proset Autism</a> for my IB Personal
+                        Project.
                     </li>
                     <li>Won the 3rd Place award for Best Speaker during the Model UN held in 2019.</li>
                 </ul>
