Replaced the JAC section of the inspirations page with Steel Hostilities to begin changing it to a Projects page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 </p>
             </article>
 
-            <img id="self_portrait" src="./assets/phone/palmar.jpg" alt="Palmarino DiMarco"
-                sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw" srcset="./assets/phone/palmar.jpg 300w,
-            ./assets/tablet/palmar.jpg 400w,
-            ./assets/desktop/palmar.jpg 500w">
+            <img id="self_portrait" src="./assets/phone/Palmar.jpg" alt="Palmarino DiMarco"
+                sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw" srcset="./assets/phone/Palmar.jpg 300w,
+            ./assets/tablet/Palmar.jpg 400w,
+            ./assets/desktop/Palmar.jpg 500w">
 
             <article id="technologies_text">
                 <h1>Technologies</h1>
