--- a/projects.html
+++ b/projects.html
@@ -14,28 +14,42 @@
     <!-- sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw"  -->
 
     <main id="inspirations">
-        <section class="influence" id="jac">
+        <section class="project" id="steel_hostilities">
 
-            <img src="./assets/phone/jac.jpg" alt="John Abbott College" srcset="./assets/phone/jac.jpg 300w,
-            ./assets/tablet/jac.jpg 400w,
-            ./assets/desktop/jac.jpg 500w">
+            <img src="./assets/phone/Steel-Hostilities-Image1.png" alt="Steel Hostilities Screenshot" srcset="./assets/phone/Steel-Hostilities-Image1.png 300w,
+            ./assets/tablet/Steel-Hostilities-Image1.png 400w,
+            ./assets/desktop/Steel-Hostilities-Image1.png 500w">
 
-            <article class="influence_text">
-                <h1>Javascript and OOP</h1>
-                <p>I really enjoy programming so far in Computer Science, and the next steps that I will be taking to
-                    improve are learning about Javascript and Object Oriented Programming. I look forward to learning
-                    nearly everything that we learn in Computer Science, and my favourite
-                    courses so far suggest that I should aim for a programming job. By learning to code in Javascript
-                    and fully take advantage of objects, I can make programs that far
-                    exceed what I can do with my current skill set.</p>
+            <article class="project_text">
+                <h1>Steel Hostilities</h1>
+                <h2>Fall 2021</h2>
+                <p>
+                    Steel Hostilities is a Sports/Fighting game that is heavily inspired by the <a class="inline-link" href="https://en.wikipedia.org/wiki/Punch-Out!!">Punch-Out!!</a> series which
+                    tasks
+                    players to defeat three bosses as a warrior armed with light punches, heavy sword slashes, the ability to dodge horizontally, and two super
+                    moves which can quickly turn the tide of battle. The campaign does not end upon the defeat of the
+                    final boss, as skilled fighters can endlessly rechallenge stronger versions of all three
+                    opponents in pursuit of a high score. Should a combatant find themself exhausted of constantly
+                    having to fight, Steel Hostilities includes an automatic "quick-save" feature which will allow the contender
+                    to take a break and return to their most recent fight, though this can only be done once per bout to
+                    prevent save scumming.
+                    The game was developed by <a class="inline-link" href="https://github.com/RyanBujold">Ryan
+                        Bujold</a> and I as the
+                    final project for a Game Programming course at John Abbott College,
+                    which was taught by <a class="inline-link" href="https://github.com/VikramSinghMTL">Vikram Singh</a>
+                    in the Fall of
+                    2021.
+                </p>
+
+                <button><a href="https://github.com/Picard4/Steel-Hostilities-Game">View Repository</a></button>
             </article>
         </section>
-        <section class="influence" id="engine">
+        <section class="project" id="engine">
             <img src="./assets/phone/game-engines.jpg" alt="Various popular game engines" srcset="./assets/phone/game-engines.jpg 300w,
             ./assets/tablet/game-engines.jpg 400w,
             ./assets/desktop/game-engines.jpg 500w">
 
-            <article class="influence_text">
+            <article class="project_text">
                 <h1>Intermediate Game Development</h1>
                 <p>When developing RNG Hell, I tried to keep my scope for the game as small as possible and instead
                     provide an experience that isn't commonly seen in games. The reason for this small scope was because
@@ -47,12 +61,12 @@
                     take my first steps in professional game development.</p>
             </article>
         </section>
-        <section class="influence" id="math">
-            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook"  srcset="./assets/phone/calculus.jpg 300w,
+        <section class="project" id="math">
+            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook" srcset="./assets/phone/calculus.jpg 300w,
             ./assets/tablet/calculus.jpg 400w,
             ./assets/desktop/calculus.jpg 500w">
 
-            <article class="influence_text">
+            <article class="project_text">
                 <h1>Complex Mathematics and Programming</h1>
                 <p>I've always loved Math growing up, and that still hasn't changed today as I'm currently taking a
                     complimentary Science Calculus 1 course. So far the complex math that I'm used to working with in a
@@ -62,12 +76,12 @@
                     that incorporates both programming and math.</p>
             </article>
         </section>
-        <section class="influence" id="multi_platform">
-            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U"  srcset="./assets/phone/WiiU.jpg 300w,
+        <section class="project" id="multi_platform">
+            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U" srcset="./assets/phone/WiiU.jpg 300w,
             ./assets/tablet/WiiU.jpg 400w,
             ./assets/desktop/WiiU.jpg 500w">
 
-            <article class="influence_text">
+            <article class="project_text">
                 <h1>Designing for Multiple Systems</h1>
                 <p>When it comes to collecting video games, I often enjoy buying multiple different versions of the same
                     game to compare the differences. On top of that, one of my favourite consoles of all time is the
