--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,63 @@
 
     <!-- sizes="(min-width: 590px) 400px, (min-width: 1070px) 500px, 300vw"  -->
 
-    <main id="inspirations">
+    <main id="projects">
+        <section class="project" id="rng_hell_series">
+            <div id="rng_hell_screenshots">
+                <img src="./assets/phone/RNG-Hell-Image1.png" alt="RNG Hell Screenshot" srcset="./assets/phone/RNG-Hell-Image1.png 300w,
+            ./assets/tablet/RNG-Hell-Image1.png 400w,
+            ./assets/desktop/RNG-Hell-Image1.png 500w">
+
+                <img src="./assets/phone/RNG-Hell-Online-Image1.png" alt="RNG Hell Online Screenshot" srcset="./assets/phone/RNG-Hell-Online-Image1.png 300w,
+            ./assets/tablet/RNG-Hell-Online-Image1.png 400w,
+            ./assets/desktop/RNG-Hell-Online-Image1.png 500w">
+            </div>
+
+            <article class="project_text">
+                <h1>RNG Hell Series</h1>
+
+                <h2>RNG Hell</h2>
+
+                <h3>Fall 2019</h3>
+
+                <p>
+                    The original RNG Hell was the first video game I ever developed, with it being used as the final
+                    project of my Programming I course at John Abbott College, which was taught by Larry Fagen.
+                    When developing this first project, I tried to keep my scope for the game as small as possible and
+                    instead
+                    provide an experience that isn't commonly seen in games in order to produce something unique without
+                    having to implement mechanics which were out of my reach at the time. After coming up with multiple
+                    mold-breaking
+                    ideas, I wound up creating a game that is highly dependent on luck, with most deaths being caused by
+                    random instant kills. For good measure, I even implemented a feature which can delete the
+                    player's score if they happen to be unlucky, which can trigger even during what would otherwise be
+                    successful runs! Needless
+                    to say this is not a game that is meant to be taken seriously, unless you have a gambling addiction
+                    and an interest in destroying your computer.
+                </p>
+
+                <h2>RNG Hell Online</h2>
+
+                <h3>Fall 2020</h3>
+
+                <p>
+                    This sequel to the original RNG Hell was developed as the final project for my Web Programming I
+                    course, which was taught by Helen Katalifos. For this second attempt, I aimed to showcase how much I
+                    had improved over the past year by developing a new RNG Hell game which completely surpassed the
+                    original, while still retaining the frantic gameplay that is endemic to the franchise. This was
+                    accomplished through the introduction of multiple new features, such as two new
+                    attacks, the ability to fire melee attacks in 4 different directions, a new luck stat
+                    which reduces the odds of randomly getting instantly killed (along with the chances of having one's
+                    score deleted), and an all-new Online mode. This Online
+                    mode features the "latest and greatest" netcode, which will frequently slow down gameplay, allow
+                    enemies to occasionally "rollback" to life, and randomly disconnect; prematurely ending the player's
+                    game without a score to show for it, all without requiring an actual internet connection!
+                </p>
+
+                <button><a href="https://github.com/Picard4/RNG_Hell_Projects">View Repository</a></button>
+            </article>
+        </section>
+
         <section class="project" id="steel_hostilities">
 
             <img src="./assets/phone/Steel-Hostilities-Image1.png" alt="Steel Hostilities Screenshot" srcset="./assets/phone/Steel-Hostilities-Image1.png 300w,
@@ -24,74 +80,26 @@
                 <h1>Steel Hostilities</h1>
                 <h2>Fall 2021</h2>
                 <p>
-                    Steel Hostilities is a Sports/Fighting game that is heavily inspired by the <a class="inline-link" href="https://en.wikipedia.org/wiki/Punch-Out!!">Punch-Out!!</a> series which
+                    Steel Hostilities is a Sports/Fighting game that is heavily inspired by the <a class="inline-link"
+                        href="https://en.wikipedia.org/wiki/Punch-Out!!">Punch-Out!!</a> series which
                     tasks
-                    players to defeat three bosses as a warrior armed with light punches, heavy sword slashes, the ability to dodge horizontally, and two super
+                    players to defeat three bosses as a warrior armed with light punches, heavy sword slashes, the
+                    ability to dodge horizontally, and two super
                     moves which can quickly turn the tide of battle. The campaign does not end upon the defeat of the
                     final boss, as skilled fighters can endlessly rechallenge stronger versions of all three
                     opponents in pursuit of a high score. Should a combatant find themself exhausted of constantly
-                    having to fight, Steel Hostilities includes an automatic "quick-save" feature which will allow the contender
+                    having to fight, Steel Hostilities includes an automatic "quick-save" feature which will allow the
+                    contender
                     to take a break and return to their most recent fight, though this can only be done once per bout to
                     prevent save scumming.
                     The game was developed by <a class="inline-link" href="https://github.com/RyanBujold">Ryan
                         Bujold</a> and I as the
                     final project for a Game Programming course at John Abbott College,
-                    which was taught by <a class="inline-link" href="https://github.com/VikramSinghMTL">Vikram Singh</a>
-                    in the Fall of
-                    2021.
+                    which was taught by <a class="inline-link" href="https://github.com/VikramSinghMTL">Vikram
+                        Singh</a>.
                 </p>
 
                 <button><a href="https://github.com/Picard4/Steel-Hostilities-Game">View Repository</a></button>
-            </article>
-        </section>
-        <section class="project" id="engine">
-            <img src="./assets/phone/game-engines.jpg" alt="Various popular game engines" srcset="./assets/phone/game-engines.jpg 300w,
-            ./assets/tablet/game-engines.jpg 400w,
-            ./assets/desktop/game-engines.jpg 500w">
-
-            <article class="project_text">
-                <h1>Intermediate Game Development</h1>
-                <p>When developing RNG Hell, I tried to keep my scope for the game as small as possible and instead
-                    provide an experience that isn't commonly seen in games. The reason for this small scope was because
-                    I still have a long way to go before I can work on a
-                    fully realized video game. In due time, I particularily hope to learn about setting up movement,
-                    proper AI and integration with
-                    original assets. In order to accomplish this, I believe that I need to become well-versed in video
-                    game engines to
-                    take my first steps in professional game development.</p>
-            </article>
-        </section>
-        <section class="project" id="math">
-            <img src="./assets/phone/calculus.jpg" alt="A Calculus Textbook" srcset="./assets/phone/calculus.jpg 300w,
-            ./assets/tablet/calculus.jpg 400w,
-            ./assets/desktop/calculus.jpg 500w">
-
-            <article class="project_text">
-                <h1>Complex Mathematics and Programming</h1>
-                <p>I've always loved Math growing up, and that still hasn't changed today as I'm currently taking a
-                    complimentary Science Calculus 1 course. So far the complex math that I'm used to working with in a
-                    traditional math class hasn't been
-                    applied much in Computer Science, but I know that those skills will be important later on. I'm
-                    looking forward to apply more of my math skills to Computer Science, as I would really like a job
-                    that incorporates both programming and math.</p>
-            </article>
-        </section>
-        <section class="project" id="multi_platform">
-            <img src="./assets/phone/WiiU.jpg" alt="Nintendo Wii U" srcset="./assets/phone/WiiU.jpg 300w,
-            ./assets/tablet/WiiU.jpg 400w,
-            ./assets/desktop/WiiU.jpg 500w">
-
-            <article class="project_text">
-                <h1>Designing for Multiple Systems</h1>
-                <p>When it comes to collecting video games, I often enjoy buying multiple different versions of the same
-                    game to compare the differences. On top of that, one of my favourite consoles of all time is the
-                    Nintendo Wii U, a device that is
-                    infamous for its lack of third party support. Due to the way I like to enjoy my video games, I've
-                    always been curious about the needs of different
-                    platforms when running the same program. Currently I've only learned about developing for PC, with
-                    the exception of web development, so in
-                    time I hope to learn what makes certain machines more or less desirable for developers when compared
-                    to the common customer.</p>
             </article>
         </section>
     </main>
