Styled the repository link buttons on the projects page

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                     game without a score to show for it, all without requiring an actual internet connection!
                 </p>
 
-                <button><a href="https://github.com/Picard4/RNG_Hell_Projects">View Repository</a></button>
+                <a class="repository-link" href="https://github.com/Picard4/RNG_Hell_Projects"><button>View Repository</button></a>
             </article>
         </section>
 
@@ -99,7 +99,7 @@
                         Singh</a>.
                 </p>
 
-                <button><a href="https://github.com/Picard4/Steel-Hostilities-Game">View Repository</a></button>
+                <a class="repository-link" href="https://github.com/Picard4/Steel-Hostilities-Game"><button>View Repository</button></a>
             </article>
         </section>
     </main>
