Updated the About Me page for January 2024.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <article id="introduction_text">
                 <h1>Introduction</h1>
                 <p>
-                    My name is Palmarino DiMarco, and I am currently a student in the Bachelor of Computer Science
-                    Program at Concordia University.
+                    My name is Palmarino DiMarco, and I am currently a student in the 
+                    Bachelor of Computer Science Co-op Program at Concordia University.
                     While working on a project, I aim to utilize a patient approach which allows me to take all the time
                     necessary to produce the best possible end product.
-                    My main hobbies are playing video games, improving my programming skills, and taking care of my pets
-                    (two guinea pigs and one budgie).
+                    My main hobbies are playing video games, improving my academic skills, and taking care of my budgie and guinea pigs.
                 </p>
             </article>
 
